--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "homepage": "https://github.com/onebytegone/restroom-monitor-web",
   "devDependencies": {
+    "browserify": "^10.1.3",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.0.0"
   }
