--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "grunt-browserify": "^3.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.0.0"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
   }
 }
