--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-sass": "^1.0.0"
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
   }
 }
